--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -16,13 +18,12 @@
         android:theme="@style/Theme.MissionStatement"
         tools:targetApi="31">
         <activity
+            android:name=".DeatilsTest"
+            android:exported="false" />
+        <activity
             android:name=".Menu.Personality_Test"
-            android:exported="true">
-
-
-    </activity>
-
-    <activity
+            android:exported="true"></activity>
+        <activity
             android:name=".Menu.ListOperator"
             android:exported="false" />
         <activity
@@ -37,9 +38,7 @@
         <activity
             android:name=".Register"
             android:exported="false"
-            android:noHistory="true"/>
-
-
+            android:noHistory="true" />
         <activity
             android:name=".Login"
             android:exported="false"
@@ -47,12 +46,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
