--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
@@ -18,11 +25,20 @@
         android:theme="@style/Theme.MissionStatement"
         tools:targetApi="31">
         <activity
-            android:name=".DeatilsTest"
-            android:exported="false" />
+            android:name=".Menu.DeatilsTest"
+            android:exported="true" >
+
+        </activity>
+
         <activity
             android:name=".Menu.Personality_Test"
-            android:exported="true"></activity>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Menu.ListOperator"
             android:exported="false" />
@@ -32,9 +48,7 @@
         <activity
             android:name=".Menu.Menu"
             android:exported="false" />
-        <activity
-            android:name=".Firebase.Auth"
-            android:exported="false" />
+
         <activity
             android:name=".Register"
             android:exported="false"
@@ -46,12 +60,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
+
+
+
     </application>
 
 </manifest>
