--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,24 +20,23 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_pencil"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/shape_circle"
         android:supportsRtl="true"
         android:theme="@style/Theme.MissionStatement"
         tools:targetApi="31">
         <activity
             android:name=".Menu.DeatilsTest"
-            android:exported="true" >
+            android:exported="false"
+            android:noHistory="true"
+            >
 
         </activity>
 
         <activity
             android:name=".Menu.Personality_Test"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Menu.ListOperator"
@@ -47,7 +46,9 @@
             android:exported="false" />
         <activity
             android:name=".Menu.Menu"
-            android:exported="false" />
+            android:exported="false"
+
+            />
 
         <activity
             android:name=".Register"
@@ -60,7 +61,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
 
