--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,10 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:allowBackup="true"
@@ -26,18 +25,17 @@
         android:theme="@style/Theme.MissionStatement"
         tools:targetApi="31">
         <activity
-            android:name=".Menu.DeatilsTest"
-            android:exported="false"
-            android:noHistory="true"
-            >
-
+            android:name=".Menu.ResultsGraph"
+            android:exported="false" >
         </activity>
 
         <activity
+            android:name=".Menu.DeatilsTest"
+            android:exported="false"
+            android:noHistory="true"></activity>
+        <activity
             android:name=".Menu.Personality_Test"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".Menu.ListOperator"
             android:exported="false" />
@@ -46,10 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".Menu.Menu"
-            android:exported="false"
-
-            />
-
+            android:exported="false" />
         <activity
             android:name=".Register"
             android:exported="false"
@@ -67,10 +62,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-
     </application>
 
 </manifest>
