--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,17 +25,18 @@
         android:theme="@style/Theme.MissionStatement"
         tools:targetApi="31">
         <activity
+            android:name=".Manager.ManagerActivity"
+            android:exported="false" />
+        <activity
             android:name=".Menu.ResultsGraph"
-            android:exported="false" >
-        </activity>
-
+            android:exported="false"></activity>
         <activity
             android:name=".Menu.DeatilsTest"
             android:exported="false"
-            android:noHistory="true"></activity>
+            android:noHistory="true" />
         <activity
             android:name=".Menu.Personality_Test"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Menu.ListOperator"
             android:exported="false" />
@@ -48,7 +49,7 @@
         <activity
             android:name=".Register"
             android:exported="false"
-            android:noHistory="true" />
+            android:noHistory="false" />
         <activity
             android:name=".Login"
             android:exported="false"
